[package]
name = "updadmin"
version = "0.1.0"
authors = ["Pierre Leresteux <pierre.leresteux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["time", "stream"] }
futures = "0.3.5"
log = "0.4"
pretty_env_logger = "0.4"
mongodb = "1.1.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
chrono = { version = "0.4", features = ["serde"] }
bson = "1.1.0"
comfy-table = "1.1.1"
structopt = { version = "0.3", features = ["color", "suggestions"] }
anyhow = "1.0.32"

[dev-dependencies]
test-case = "1.0"